// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nture-ui/form-control FormControl renders correctly in default state 1`] = `
<DocumentFragment>
  <div
    class="w-full relative"
    role="group"
  >
    <label
      class="mb-2 block text-left font-semibold"
      for="name"
      id="name-label"
    >
      Name
    </label>
    <input
      aria-describedby="name-helptext"
      id="name"
      placeholder="Name"
    />
    <div
      class="mt-2 text-sm text-gray-400"
      id="name-helptext"
    >
      Enter your name please!
    </div>
  </div>
</DocumentFragment>
`;

exports[`@nture-ui/form-control FormControl renders correctly when invalid 1`] = `
<DocumentFragment>
  <div
    class="w-full relative"
    role="group"
  >
    <label
      class="mb-2 block text-left font-semibold"
      data-invalid=""
      for="name"
      id="name-label"
    >
      Name
    </label>
    <input
      aria-describedby="name-feedback name-helptext"
      aria-invalid="true"
      id="name"
      placeholder="Name"
    />
    <div
      class="mt-2 text-sm text-gray-400"
      id="name-helptext"
    >
      Enter your name please!
    </div>
    <svg
      aria-hidden="true"
      class="mr-2 text-red-600 css-t12e3p-Icon"
      focusable="false"
      height="1rem"
      role="presentation"
      viewBox="0 0 24 24"
      width="1rem"
    >
      <path
        d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
        fill="currentColor"
      />
    </svg>
    <div
      aria-live="polite"
      class="text-sm mt-2  text-red-600 flex items-center"
      id="name-feedback"
    >
      Your name is invalid
    </div>
  </div>
</DocumentFragment>
`;

exports[`@nture-ui/form-control FormControl renders correctly when required 1`] = `
<DocumentFragment>
  <div
    class="w-full relative"
    role="group"
  >
    <label
      class="mb-2 block text-left font-semibold"
      for="name"
      id="name-label"
    >
      Name
    </label>
    <span
      aria-hidden="true"
      role="presentation"
    >
      *
    </span>
    <input
      aria-describedby="name-helptext"
      aria-required="true"
      id="name"
      placeholder="Name"
    />
    <div
      class="mt-2 text-sm text-gray-400"
      id="name-helptext"
    >
      Enter your name please!
    </div>
  </div>
</DocumentFragment>
`;
